--- a/package.json
+++ b/package.json
@@ -6,9 +6,49 @@
     "start": "next start"
   },
   "dependencies": {
-    "mongodb": "^3.5.9",
+    "@popperjs/core": "^2.9.2",
+    "@reach/portal": "^0.13.0",
+    "@reduxjs/toolkit": "^1.5.1",
+    "axios": "^0.21.4",
+    "formik": "^2.2.9",
+    "is_js": "^0.9.0",
+    "js-cookie": "^3.0.1",
+    "mongodb": "^3.7.1",
     "next": "latest",
+    "next-compose-plugins": "2.2.0",
+    "next-connect": "^0.10.2",
+    "next-images": "1.2.0",
+    "nprogress": "0.2.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-popper": "^2.2.3",
+    "react-redux": "7.1.0",
+    "react-spinners": "0.5.12",
+    "redux": "4.0.4",
+    "redux-logger": "3.0.6",
+    "redux-thunk": "2.3.0",
+    "sass": "1.26.5",
+    "styled-components": "^5.3.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.3.3",
+    "@types/mongodb": "^4.0.7",
+    "@types/react": "^17.0.24",
+    "@types/styled-components": "5.1.0",
+    "@typescript-eslint/eslint-plugin": "4.28.4",
+    "@typescript-eslint/parser": "4.28.4",
+    "autoprefixer": "^10.3.1",
+    "babel-plugin-styled-components": "^1.13.2",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^11.0.1",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-import": "2.21.0",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-react": "7.20.0",
+    "eslint-plugin-react-hooks": "4.0.4",
+    "tailwindcss": "^2.2.7",
+    "typescript": "^4.4.3"
   }
 }
