--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@reach/portal": "^0.13.0",
     "@reduxjs/toolkit": "^1.5.1",
     "axios": "^0.21.4",
+    "firebase": "^8.6.8",
     "formik": "^2.2.9",
     "is_js": "^0.9.0",
     "js-cookie": "^3.0.1",
